Refactor thermal_network package layout
Reorganize the thermal_network package into common, detailed and simplified subpackages and update all imports accordingly. Moved utility and network_service_priority modules to thermal_network.common (geometry and service_priority), moved substation_matrix, thermal_network and simplified_thermal_network into detailed/ and simplified/ respectively (with corresponding renames), and added package __init__.py files. Updated callers across the codebase (optimization preprocessing, network code, storage_tank, substation, thermal network phasing/optimization, scripts.yml) to use the new module paths and adjusted function imports (e.g. calculate_ground_temperature now from simplified.solver). This cleans up the package structure and centralizes shared utilities.

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -256,7 +256,7 @@ Thermal Network Design:
     short_description: Solve thermal hydraulic network flow and sizing
     description: This Feature solves the thermal hydraulic network based on the thermal network's piping layout created by Feature Thermal Network Part I (layout).
     interfaces: [cli, dashboard]
-    module: cea.technologies.thermal_network.thermal_network
+    module: cea.technologies.thermal_network.detailed.thermal_network
     parameters: ['general:scenario', 'general:multiprocessing',
                  'general:number-of-cpus-to-keep-free', 'thermal-network-phasing', 'thermal-network']
     input-files:
