--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -321,7 +321,7 @@ Energy Supply System Optimisation:
     short_description: Optimise thermal network design variables
     description: This Feature optimises network design variables (plant locations, layout,...).
     interfaces: [cli]
-    module: cea.technologies.thermal_network.thermal_network_optimization
+    module: cea.technologies.thermal_network.optimization.main
     parameters: ['general:scenario', 'general:multiprocessing', 'general:number-of-cpus-to-keep-free',
                  thermal-network-optimization]
 
