--- a/cea/default.config
+++ b/cea/default.config
@@ -2116,11 +2116,29 @@ y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO2e.
 y-metric-unit.category = Y-axis settings
 
-y-normalised-by = gross_floor_area
+y-normalised-by =
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
 y-normalised-by.category = Y-axis settings
+
+y-min =
+y-min.type = RealParameter
+y-min.nullable = true
+y-min.help = Set the minimum value for the Y-axis.
+y-min.category = Y-axis settings
+
+y-max =
+y-max.type = RealParameter
+y-max.nullable = true
+y-max.help = Set the maximum value for the Y-axis.
+y-max.category = Y-axis settings
+
+y-step =
+y-step.type = RealParameter
+y-step.nullable = true
+y-step.help = Set the step size for the Y-axis.
+y-step.category = Y-axis settings
 
 net-zero-target-year = 2060
 net-zero-target-year.type = IntegerParameter
