PV can be non-existing

--- a/cea/default.config
+++ b/cea/default.config
@@ -2104,7 +2104,7 @@ envelope-components.category = Y-axis settings
 
 pv-code =
 pv-code.type = ColumnChoiceParameter
-pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected.
+pv-code.help = PV panel type to include in plot. Only relevant when pv_electricity_offset/pv_electricity_export in operation-services OR pv in envelope-components is selected. Leave empty if not plotting PV data.
 pv-code.locator = get_db4_components_conversion_conversion_technology_csv
 pv-code.kwargs = conversion_technology=PHOTOVOLTAIC_PANELS
 pv-code.column = code
