Add default value for non-nullable parameter

--- a/cea/default.config
+++ b/cea/default.config
@@ -2116,7 +2116,7 @@ y-metric-unit.choices = tonCO2e, kgCO2e, gCO2e
 y-metric-unit.help = Select the unit of the metric to plot for the Y-axis - CO2e.
 y-metric-unit.category = Y-axis settings
 
-y-normalised-by =
+y-normalised-by = no_normalisation
 y-normalised-by.type = ChoiceParameter
 y-normalised-by.choices = no_normalisation, gross_floor_area, conditioned_floor_area
 y-normalised-by.help = Select the normalisation factor. The unit of area is m2.
